# paindairy

./: README.md
backend/: manage.py  poetry.toml  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
backend/accounts/migrations/: 0001_create_user_model.py
backend/paindairy/: asgi.py  celery.py  urls.py  wsgi.py
backend/paindairy/settings/: base.py  dev.py  prod.py
backend/painrecord/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/painrecord/migrations/: 0001_painrecord_model_added.py  0002_alter_painrecord_pain_date_and_more.py  0003_added_related_name_for_user_pain_record.py  0004_alter_painrecord_options.py
backend/templates/accounts/: activation_request.html  activation_request.txt  message_doctor.html  message_doctor.txt
backend/templates/accounts/email/admin/: message.html  message.txt  subject.txt
backend/templates/accounts/email/contact/: message.html  message.txt  subject.txt
backend/templates/messaging/email/: accept.html  decline.html  rescind.html
frontend/: .prettierrc  package-lock.json
frontend/src/: app.html
frontend/src/lib/assets/css/: style.css  style.min.css
frontend/src/lib/components/Footer/: Footer.svelte
frontend/src/lib/interfaces/: painrecord.interface.ts  session.interface.ts  user.interface.ts
frontend/src/lib/store/: notification.store.ts  session.store.ts
frontend/src/lib/utils/: auth.utils.ts  constants.utils.ts  helpers.utils.ts  requests.utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+15 files in other folders)
